force-app/main/default/objects/HP_AppelsSortants__c/HP_AppelsSortants__c.object-meta.xml
<CustomObject>
    <label>Appel sortant</label>
    <nameField>
        <displayFormat>HPAS-{0000000000}</displayFormat>
        <label>Appels sortants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appels sortants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>