force-app/main/default/objects/HP_AppelsSortants__c/fields/HP_CaseRappel__c.field-meta.xml
<CustomField>
    <fullName>HP_CaseRappel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Rappel</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appels sortants</relationshipLabel>
    <relationshipName>Appels_sortants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>