force-app/main/default/objects/HP_AppelsSortants__c/fields/HP_CommentaireRappel__c.field-meta.xml
<CustomField>
    <fullName>HP_CommentaireRappel__c</fullName>
    <label>Commentaire rappel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>