force-app/main/default/objects/HP_AppelsSortants__c/fields/HP_ReponseRappel__c.field-meta.xml
<CustomField>
    <fullName>HP_ReponseRappel__c</fullName>
    <label>Réponse du client</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HP_ReponseRappels</valueSetName>
    </valueSet>
</CustomField>