force-app/main/default/objects/HP_AppelsSortants__c/fields/HP_ResultatRappel__c.field-meta.xml
<CustomField>
    <fullName>HP_ResultatRappel__c</fullName>
    <label>Résultat de l’appel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HP_ReponseRappel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HP_ResultatsRappel</valueSetName>
    </valueSet>
</CustomField>